Fixes Dark Mode not reaching bottom of the screen

--- a/src/static/css/layout/_main.scss
+++ b/src/static/css/layout/_main.scss
@@ -16,6 +16,7 @@
 		margin: auto;
   		padding: 2vw;
 		text-align: center;
+		height: 100vh;
 	}
 
 	.titlefadein{
